--- a/3.4 Birthday Invite Project/index.html
+++ b/3.4 Birthday Invite Project/index.html
@@ -2,7 +2,7 @@
 <h2>On 12th may</h2>
 
 <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg
-" alt="An image of a Birthday Cake with fondant">
+" alt="An image of a Birthday Cake with fondant and candles">
 
 <h3>What to bring?</h3>
     <ul>
